Se agrego una persoalizacion del footer

--- a/index.html
+++ b/index.html
@@ -42,14 +42,28 @@
             </article>
             <article class="contenido">
                 <h2 class="texto-azul">Puente De la Torre</h2>
-                <img src="img/imagen_2.jpg" alt="Cuidad de paris">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium accusamus incidunt distinctio atque exercitationem totam nemo vitae vero itaque, aliquam, aperiam officia veniam iure, reiciendis explicabo nobis. Corrupti, nostrum facilis!</p>
+                <div class="dividir-contenido">
+                    <div class="imagen">
+                        <img src="img/imagen_2.jpg" alt="Cuidad de paris">
+                    </div>
+                    <div class="texto">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti ut tenetur exercitationem similique autem itaque reprehenderit hic, cumque nemo, natus fugit veniam consequatur expedita numquam asperiores aspernatur molestiae alias. Aperiam.</p>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, praesentium! Accusantium maiores eveniet magnam, praesentium esse sunt consequuntur corrupti, fugit, a error saepe ut dolor vel quos autem. Architecto, mollitia.</p>
                 <a href="#" class="boton">LEER MAS</a>
             </article>
             <article class="contenido">
-                <h2 class="texto-azul">Metro de Londres</h2>
-                <img src="img/imagen_3.jpg" alt="Cuidad de paris">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium accusamus incidunt distinctio atque exercitationem totam nemo vitae vero itaque, aliquam, aperiam officia veniam iure, reiciendis explicabo nobis. Corrupti, nostrum facilis!</p>
+                <h2 class="texto-azul">Metro Londres</h2>
+                <div class="dividir-contenido">
+                    <div class="imagen">
+                        <img src="img/imagen_3.jpg" alt="Cuidad de paris">
+                    </div>
+                    <div class="texto">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti ut tenetur exercitationem similique autem itaque reprehenderit hic, cumque nemo, natus fugit veniam consequatur expedita numquam asperiores aspernatur molestiae alias. Aperiam.</p>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, praesentium! Accusantium maiores eveniet magnam, praesentium esse sunt consequuntur corrupti, fugit, a error saepe ut dolor vel quos autem. Architecto, mollitia.</p>
                 <a href="#" class="boton">LEER MAS</a>
             </article>
         </main>
@@ -72,7 +86,7 @@
         </aside>
     </div>
     <footer class="pie">
-        <div class="contenedor footer-prin">
+        <section class="contenedor footer-prin">
             <div class="sobrenosotrso">
                 <h3>Sobre Nosotros</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sed iure quod, neque rerum qui, reiciendis doloribus facere expedita ipsam molestiae numquam quidem dolorem cum quaerat nobis quia dolorum nesciunt.</p>
@@ -87,7 +101,12 @@
                     <a href="#">Contacto</a>
                 </div>
             </div>
-        </div>
+        </section>
+        <section class="footer-sec ">
+            <div class="contenedor">
+                <p>Todos los derechos reservados</p>
+            </div>
+        </section>
     </footer>
     <script src="hola.js"></script>
 </body>
